--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -74,18 +74,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataAccessLayer\Tables\Contraseña.cs" />
     <Compile Include="DataAccessLayer\DBContext.cs" />
     <Compile Include="DataAccessLayer\Tables\Estado.cs" />
     <Compile Include="DataAccessLayer\Tables\Modelo.cs" />
-    <Compile Include="DataAccessLayer\Tables\Password.cs" />
     <Compile Include="DataAccessLayer\Tables\Pedido.cs" />
     <Compile Include="DataAccessLayer\Views\PedidoView.cs" />
     <Compile Include="DataAccessLayer\Tables\Permiso.cs" />
-    <Compile Include="DataAccessLayer\Views\PermisosView.cs" />
     <Compile Include="DataAccessLayer\Tables\PermisoUsuario.cs" />
+    <Compile Include="DataAccessLayer\Views\PermisoView.cs" />
     <Compile Include="DataAccessLayer\Tables\Producto.cs" />
-    <Compile Include="DataAccessLayer\Tables\ReprocesoPedidos.cs" />
     <Compile Include="DataAccessLayer\Tables\Usuario.cs" />
+    <Compile Include="DataAccessLayer\Views\UsuarioView.cs" />
+    <Compile Include="Helpers\LoginValidator.cs" />
+    <Compile Include="_COSASCOMENTADAS.cs" />
     <Compile Include="FiltroListaWindow.xaml.cs">
       <DependentUpon>FiltroListaWindow.xaml</DependentUpon>
     </Compile>
