--- a/IngresoPedidos/packages.config
+++ b/IngresoPedidos/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ClosedXML" version="0.92.1" targetFramework="net45" />
+  <package id="ClosedXML.Report" version="0.1.1.1" targetFramework="net45" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net45" />
+  <package id="FastMember.Signed" version="1.3.0" targetFramework="net45" />
+  <package id="System.Linq.Dynamic.Core" version="1.0.8.7" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
