--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -106,6 +106,9 @@
     <Compile Include="DataAccessLayer\Tables\Producto.cs" />
     <Compile Include="DataAccessLayer\Tables\ReprocesoPedido.cs" />
     <Compile Include="DataAccessLayer\Views\UsuarioView.cs" />
+    <Compile Include="dgw.xaml.cs">
+      <DependentUpon>dgw.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\CustomCommand.cs" />
     <Compile Include="Helpers\CustomCommands.cs" />
     <Compile Include="Helpers\LoginValidation.cs" />
@@ -134,6 +137,10 @@
       <DependentUpon>SplashScreenCustom.xaml</DependentUpon>
     </Compile>
     <Page Include="AgregarObservacion.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="dgw.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
