--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -113,6 +113,9 @@
     <Compile Include="Helpers\CustomCommands.cs" />
     <Compile Include="Helpers\LoginValidation.cs" />
     <Compile Include="Helpers\UserRightValidation.cs" />
+    <Compile Include="ListaPedidos.xaml.cs">
+      <DependentUpon>ListaPedidos.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MostrarPedidoPopupWindow.xaml.cs">
       <DependentUpon>MostrarPedidoPopupWindow.xaml</DependentUpon>
     </Compile>
@@ -145,6 +148,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="FiltroListaWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListaPedidos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
