--- a/IngresoPedidos/IngresoPedidos.csproj
+++ b/IngresoPedidos/IngresoPedidos.csproj
@@ -97,15 +97,32 @@
     <Compile Include="AgregarObservacion.xaml.cs">
       <DependentUpon>AgregarObservacion.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataAccessLayer\Tables\Contraseña.cs" />
+    <Compile Include="DataAccessLayer\Tables\Aplicacion.cs" />
+    <Compile Include="DataAccessLayer\Tables\Autorizacion.cs" />
+    <Compile Include="DataAccessLayer\Tables\Categoria.cs" />
+    <Compile Include="DataAccessLayer\Tables\Componente.cs" />
     <Compile Include="DataAccessLayer\DBContext.cs" />
+    <Compile Include="DataAccessLayer\Tables\Despacho.cs" />
+    <Compile Include="DataAccessLayer\Tables\Estado.cs" />
+    <Compile Include="DataAccessLayer\Tables\Falla.cs" />
+    <Compile Include="DataAccessLayer\Tables\Imagen.cs" />
+    <Compile Include="DataAccessLayer\Tables\Insumo.cs" />
     <Compile Include="DataAccessLayer\Tables\Modelo.cs" />
+    <Compile Include="DataAccessLayer\Tables\Observacion.cs" />
+    <Compile Include="DataAccessLayer\Tables\Orden.cs" />
+    <Compile Include="DataAccessLayer\Tables\Password.cs" />
     <Compile Include="DataAccessLayer\Tables\Pedido.cs" />
     <Compile Include="DataAccessLayer\Views\PedidoView.cs" />
+    <Compile Include="DataAccessLayer\Tables\Permiso.cs" />
+    <Compile Include="DataAccessLayer\Tables\PermisoUsuario.cs" />
     <Compile Include="DataAccessLayer\Views\PermisoView.cs" />
     <Compile Include="DataAccessLayer\Tables\Producto.cs" />
+    <Compile Include="DataAccessLayer\Tables\Reparacion.cs" />
     <Compile Include="DataAccessLayer\Tables\ReprocesoPedido.cs" />
+    <Compile Include="DataAccessLayer\Tables\sysdiagrams.cs" />
+    <Compile Include="DataAccessLayer\Tables\Usuario.cs" />
     <Compile Include="DataAccessLayer\Views\UsuarioView.cs" />
+    <Compile Include="DataAccessLayer\Tables\Version.cs" />
     <Compile Include="Helpers\CustomCommand.cs" />
     <Compile Include="Helpers\CustomCommands.cs" />
     <Compile Include="Helpers\LoginValidation.cs" />
