--- a/IngresoPedidos/packages.config
+++ b/IngresoPedidos/packages.config
@@ -6,6 +6,8 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net45" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net45" />
+  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net45" />
+  <package id="MaterialDesignThemes" version="2.5.1" targetFramework="net45" />
   <package id="System.Linq.Dynamic.Core" version="1.0.8.7" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
